[package]
name = "api_server"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
diesel = { version = "1.4.2", features = ["postgres","uuidv07", "r2d2", "chrono"] }
r2d2 = "0.8.8"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = [ "runtime-actix-native-tls" , "postgres" ] }
pwhash = "1"
jsonwebtoken = "8.0.1"
chrono = "0.4"
actix-web-httpauth = "0.6.0"